--- a/Teste1/teste1.html
+++ b/Teste1/teste1.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    Testing Task from alura, where william's code isnt working.
-    <script src="teste1.css" defer></script>
+    <h1>Testing Task from alura, where william's code isnt working.</h1>
+    <script src="teste1.js" defer></script>
 </body>
 
 </html>
