Adding Test2 html

--- a/Teste2/Teste2.html
+++ b/Teste2/Teste2.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="teste1.css">
+    <link rel="stylesheet" href="Teste2.html">
     <title>JS Game</title>
 </head>
 
 <body>
     <h1>Criando um cotador que vai até 10 usando loop de while</h1>
-    <script src="teste1.js" defer></script>
+    <script src="Teste2.html" defer></script>
 </body>
 
 </html>
