--- a/Teste3/Teste3.html
+++ b/Teste3/Teste3.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Crie um contador que começa em 10 e vá até 0 usando um loop while.</br> Mostre cada número.</h1>
+    <h1>Crie um programa de contagem regressiva.</br> Peça um número e conte deste número até 0, usando um loop while no console do navegador.</br> Mostre cada número.</h1>
     <script src="Teste3.js" defer></script>
 </body>
 
