--- a/Teste4/Teste4.html
+++ b/Teste4/Teste4.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Crie um programa de contagem regressiva.</br> Peça um número e conte deste número até 0.</br> use um loop while no console do navegador.</h1>
+    <h1>Crie um programa de contagem progressiva.</br> Peça um número e conte de 0 até esse número.</br> Use um loop while no console do navegador..</h1>
     <script src="Teste4.js" defer></script>
 </body>
 
